REST interface enhanced and JPA Layer added
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1560525 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <commons.lang.version>3.0.1</commons.lang.version>
         <commons.logging.version>1.1.1</commons.logging.version>
         <cxf.version>2.7.7</cxf.version>
-        <cxf.build-utils.version>2.5.0</cxf.build-utils.version>
+        <cxf.build-utils.version>2.6.0</cxf.build-utils.version>
         <ehcache.version>2.5.1</ehcache.version>
         <httpclient.version>4.2.2</httpclient.version>
         <jericho.version>3.2</jericho.version>
@@ -482,6 +482,11 @@
                             <groupId>org.apache.cxf.build-utils</groupId>
                             <artifactId>cxf-buildtools</artifactId>
                             <version>${cxf.build-utils.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>net.sourceforge.pmd</groupId>
+                            <artifactId>pmd</artifactId>
+                            <version>5.0.4</version>
                         </dependency>
                     </dependencies>
                     <configuration>
