--- a/services/idp/src/main/resources/log4j.properties
+++ b/services/idp/src/main/resources/log4j.properties
@@ -1,6 +1,7 @@
 # Set root category priority to INFO and its only appender to CONSOLE.
 #log4j.rootCategory=FATAL, CONSOLE
 log4j.rootCategory=INFO, CONSOLE, LOGFILE
+log4j.logger.org.springframework.webflow=INFO,LOGFILE
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
