--- a/systests/jetty8/pom.xml
+++ b/systests/jetty8/pom.xml
@@ -87,6 +87,12 @@
             <version>${slf4j.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>1.8.0.7</version>
+            <scope>test</scope>
+        </dependency>        
     </dependencies>
     <build>
         <testResources>
