--- a/systests/spring/src/test/resources/logging.properties
+++ b/systests/spring/src/test/resources/logging.properties
@@ -24,7 +24,7 @@ handlers= java.util.logging.ConsoleHandler
 # can be overridden by a facility specific level
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
-.level= FINEST
+.level= INFO
 
 ############################################################
 # Handler specific properties.
@@ -38,7 +38,7 @@ java.util.logging.FileHandler.count = 1
 java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
 
 # Limit the message that are printed on the console to WARNING and above.
-java.util.logging.ConsoleHandler.level = FINEST
+java.util.logging.ConsoleHandler.level = INFO
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 
