Upgrading Fediz trunk to use CXF 3.0.0-SNAPSHOT
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1563869 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/wsclientWebapp/webapp/pom.xml
+++ b/examples/wsclientWebapp/webapp/pom.xml
@@ -89,8 +89,20 @@
                     <groupId>org.apache.santuario</groupId>
                 </exclusion>
                 <exclusion>
-                    <artifactId>wss4j</artifactId>
-                    <groupId>org.apache.ws.security</groupId>
+                    <artifactId>wss4j-ws-security-dom</artifactId>
+                    <groupId>org.apache.wss4j</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>wss4j-policy</artifactId>
+                    <groupId>org.apache.wss4j</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>wss4j-ws-security-stax</artifactId>
+                    <groupId>org.apache.wss4j</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>wss4j-ws-security-policy-stax</artifactId>
+                    <groupId>org.apache.wss4j</groupId>
                 </exclusion>
                 <exclusion>
                     <artifactId>ehcache-core</artifactId>
