Removing incorrect OSGi package
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1563905 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/core/pom.xml
+++ b/plugins/core/pom.xml
@@ -128,7 +128,8 @@
                         </Export-Package>
                         <Import-Package>
                               !org.apache.cxf.fediz.*,
-                              org.apache.ws.security.*,
+                              org.apache.wss4j.common.*,
+                              org.apache.wss4j.dom.*,
                               javax.xml.crypto.*,
                               org.apache.xml.security.*,
                               org.bouncycastle.*;resolution:=optional,
