--- a/plugins/jetty/pom.xml
+++ b/plugins/jetty/pom.xml
@@ -17,7 +17,8 @@
   specific language governing permissions and limitations
   under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
@@ -87,40 +88,12 @@
             <version>${jericho.version}</version>
             <scope>test</scope>
         </dependency>
-        <!-- 
-                <dependency>
-                        <groupId>javax.servlet.jsp</groupId>
-                        <artifactId>jsp-api</artifactId>
-                        <version>2.2.1-b03</version>
-                </dependency>
-                <dependency>
-                        <groupId>org.glassfish.web</groupId>
-                        <artifactId>jsp-impl</artifactId>
-                        <version>2.2.2-b06</version>
-                </dependency>
-                <dependency>
-                        <groupId>org.apache.geronimo.ext.tomcat</groupId>
-                        <artifactId>jasper-el</artifactId>
-                        <version>7.0.19.2</version>
-                </dependency>
-                <dependency>
-                        <groupId>org.apache.geronimo.bundles</groupId>
-                        <artifactId>jstl</artifactId>
-                        <version>1.2_1</version>
-                </dependency>
-                <dependency>
-                        <groupId>org.apache.geronimo.specs</groupId>
-                        <artifactId>geronimo-servlet_3.0_spec</artifactId>
-                        <version>1.0</version>
-                </dependency>
- -->
     </dependencies>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2.1</version>
                 <executions>
                     <execution>
                         <id>zip-file</id>
@@ -139,16 +112,17 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.4</version>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
                         <Implementation-Title>Apache CXF Fediz</Implementation-Title>
-                        <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
+                        <Implementation-Vendor>The Apache Software
+                            Foundation</Implementation-Vendor>
                         <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
                         <Implementation-Version>${project.version}</Implementation-Version>
                         <Specification-Title>Apache CXF Fediz</Specification-Title>
-                        <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
+                        <Specification-Vendor>The Apache Software
+                            Foundation</Specification-Vendor>
                         <Specification-Version>${project.version}</Specification-Version>
                         <Export-Package>
                             org.apache.cxf.fediz.jetty.*;version="${project.version}"
@@ -165,7 +139,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.6</version>
                 <executions>
                     <execution>
                         <id>copy-idp-sts</id>
