--- a/services/idp/src/main/webapp/WEB-INF/web.xml
+++ b/services/idp/src/main/webapp/WEB-INF/web.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
 Licensed to the Apache Software Foundation (ASF) under one
 or more contributor license agreements.  See the NOTICE file
@@ -18,79 +19,74 @@ under the License.
 
 -->
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-                      http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	version="3.0" metadata-complete="true">
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+    version="3.0" metadata-complete="true">
 
-	<description>Fediz IDP</description>
-	<display-name>Fediz IDP</display-name>
+    <description>Fediz IDP</description>
+    <display-name>Fediz IDP</display-name>
 
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/applicationContext.xml</param-value>
-	</context-param>
-	
-	<context-param>
-		<param-name>spring.profiles.active</param-name>
-		<param-value>jpa</param-value>
-	</context-param>
-	
-	<filter>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/applicationContext.xml</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>spring.profiles.active</param-name>
+        <param-value>jpa</param-value>
+    </context-param>
+
+    <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
-    
-    
+
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-	<servlet>
-		<servlet-name>idp</servlet-name>
-		<servlet-class>
-			org.springframework.web.servlet.DispatcherServlet
-		</servlet-class>
-		<init-param>
-			<param-name>publishContext</param-name>
-			<param-value>false</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	
-	<servlet>
-		<servlet-name>metadata</servlet-name>
-		<servlet-class>
-			org.apache.cxf.fediz.service.idp.MetadataServlet
-		</servlet-class>
-		<init-param>
-			<param-name>realm</param-name>
-			<param-value>${realm-uri}</param-value>
-		</init-param>
-	</servlet>
-	<servlet>
+    <servlet>
+        <servlet-name>idp</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>publishContext</param-name>
+            <param-value>false</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet>
+        <servlet-name>metadata</servlet-name>
+        <servlet-class>org.apache.cxf.fediz.service.idp.MetadataServlet</servlet-class>
+        <init-param>
+            <param-name>realm</param-name>
+            <param-value>${realm-uri}</param-value>
+        </init-param>
+    </servlet>
+
+    <servlet>
         <servlet-name>CXFServlet</servlet-name>
         <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
-    
+
     <servlet-mapping>
         <servlet-name>CXFServlet</servlet-name>
         <url-pattern>/services/*</url-pattern>
     </servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>idp</servlet-name>
-		<url-pattern>/federation</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>metadata</servlet-name>
-		<url-pattern>/FederationMetadata/2007-06/FederationMetadata.xml</url-pattern>
-	</servlet-mapping>
 
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
+    <servlet-mapping>
+        <servlet-name>idp</servlet-name>
+        <url-pattern>/federation</url-pattern>
+    </servlet-mapping>
 
+    <servlet-mapping>
+        <servlet-name>metadata</servlet-name>
+        <url-pattern>/FederationMetadata/2007-06/FederationMetadata.xml</url-pattern>
+    </servlet-mapping>
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
 </web-app>
