--- a/plugins/core/pom.xml
+++ b/plugins/core/pom.xml
@@ -46,7 +46,7 @@
         </dependency>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
-            <artifactId>ehcache-core</artifactId>
+            <artifactId>ehcache</artifactId>
             <version>${ehcache.version}</version>
             <scope>compile</scope>
         </dependency>
