--- a/services/idp/src/main/resources/persistence.properties
+++ b/services/idp/src/main/resources/persistence.properties
@@ -7,7 +7,8 @@
 
 
 jpa.driverClassName=org.hsqldb.jdbcDriver
-jpa.url=jdbc:hsqldb:target/fediz/db/myDB;shutdown=true
+#jpa.url=jdbc:hsqldb:target/fediz/db/myDB;shutdown=true
+jpa.url=${jpa.url}
 jpa.username=sa
 jpa.password=
 jpa.defaultData=true
