--- a/services/idp/src/test/resources/persistence.properties
+++ b/services/idp/src/test/resources/persistence.properties
@@ -7,7 +7,7 @@
 
 
 jpa.driverClassName=org.hsqldb.jdbcDriver
-jpa.url=jdbc:hsqldb:target/unit/fediz/db/myDB;shutdown=true
+jpa.url=jdbc:hsqldb:target/db/unit/myDB;shutdown=true
 jpa.username=sa
 jpa.password=
 jpa.defaultData=true
