--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -27,7 +27,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>fediz-idp</artifactId>
-    <name>Apache Fediz IDP (Spring Security &amp; Spring Web Flow)</name>
+    <name>Apache Fediz IDP</name>
     <packaging>war</packaging>
     <dependencyManagement>
         <dependencies>
