REST services secured with Spring Security
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1571817 13f79535-47bb-0310-9956-ffa450edef68

--- a/services/idp/src/main/resources/log4j.properties
+++ b/services/idp/src/main/resources/log4j.properties
@@ -2,6 +2,7 @@
 #log4j.rootCategory=FATAL, CONSOLE
 log4j.rootCategory=INFO, CONSOLE, LOGFILE
 log4j.logger.org.springframework.webflow=INFO,LOGFILE
+log4j.logger.org.springframework.security=DEBUG, CONSOLE, LOGFILE
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
