[FEDIZ-19] Single Sign out. Thanks Marc
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1572746 13f79535-47bb-0310-9956-ffa450edef68

--- a/systests/springWebapp/src/main/webapp/WEB-INF/web.xml
+++ b/systests/springWebapp/src/main/webapp/WEB-INF/web.xml
@@ -58,22 +58,7 @@
 
 	<servlet-mapping>
 		<servlet-name>FederationServlet</servlet-name>
-		<url-pattern>/secure/fedservlet</url-pattern>
-	</servlet-mapping>
-
-	<servlet-mapping>
-		<servlet-name>FederationServlet</servlet-name>
-		<url-pattern>/secure/admin/fedservlet</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>FederationServlet</servlet-name>
-		<url-pattern>/secure/user/fedservlet</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>FederationServlet</servlet-name>
-		<url-pattern>/secure/manager/fedservlet</url-pattern>
+		<url-pattern>/secure/*</url-pattern>
 	</servlet-mapping>
 
 </web-app>
