JPA bean validation added
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1573654 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <spring.security.version>3.1.4.RELEASE</spring.security.version>
         <tomcat.version>7.0.42</tomcat.version>
         <wss4j.version>2.0.0-SNAPSHOT</wss4j.version>
+        <bval.version>0.5</bval.version>
 
         <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
