--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -177,9 +177,26 @@
             <artifactId>cglib-nodep</artifactId>
             <version>2.1_3</version>
         </dependency>
+        <!-- 
         <dependency>
             <groupId>org.apache.openjpa</groupId>
             <artifactId>openjpa-all</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        -->
+        <dependency>
+            <groupId>commons-dbcp</groupId> 
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.openjpa</groupId>
+            <artifactId>openjpa-jdbc</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.openjpa</groupId>
+            <artifactId>openjpa-persistence-jdbc</artifactId>
             <version>2.2.2</version>
         </dependency>
         <dependency>
@@ -187,6 +204,16 @@
             <artifactId>cxf-rt-rs-client</artifactId>
             <version>${cxf.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.0.GA</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.bval</groupId>
+            <artifactId>bval-jsr303</artifactId>
+            <version>${bval.version}</version>
         </dependency>
     </dependencies>
     <build>
